--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,16 +1,3 @@
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/VirtualRealityBP/Maps/MotionControllerMap.MotionControllerMap
-LocalMapOptions=
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/VirtualRealityBP/Maps/MotionControllerMap.MotionControllerMap
-ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=None
-GlobalDefaultServerGameMode=None
-
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_VirtualRealityBP",NewGameName="/Script/SquanchApplication")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_VirtualRealityBP",NewGameName="/Script/SquanchApplication")
@@ -110,4 +97,19 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/VirtualRealityBP/Maps/MotionControllerMap.MotionControllerMap
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/VirtualRealityBP/Maps/MotionControllerMap.MotionControllerMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultServerGameMode=None
+
 
