--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,13 +1,14 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=0CDA1AE845E8DAC568BF1DB69325A622
 ProjectName=Virtual Reality BP Game Template
+bStartInVR=True
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 StagingDirectory=(Path=)
-FullRebuild=False
-ForDistribution=False
-IncludeDebugFiles=False
+FullRebuild=True
+ForDistribution=True
+IncludeDebugFiles=True
 bNativizeBlueprintAssets=False
 UsePakFile=True
 bGenerateChunks=False
@@ -25,3 +26,4 @@ bCookAll=False
 bCookMapsOnly=False
 bCompressed=False
 bSkipEditorContent=False
+BlueprintNativizationMethod=Inclusive
