--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -67,6 +67,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="TeleportLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_Thumbstick)
 +ActionMappings=(ActionName="TeleportRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_FaceButton1)
 +ActionMappings=(ActionName="TeleportRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Thumbstick)
++ActionMappings=(ActionName="MenuButton",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_Shoulder)
++ActionMappings=(ActionName="MenuButton",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Shoulder)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="MotionControllerThumbLeft_X",Scale=1.000000,Key=MotionController_Left_Thumbstick_X)
